--- a/src/Jiminy/Jiminy/Jiminy.csproj
+++ b/src/Jiminy/Jiminy/Jiminy.csproj
@@ -2,6 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <Version>1.0.0-rc1</Version>
+    <Authors>Frank Thomsen</Authors>
+    <Company />
+    <Description>Communicating sequential processes (CSP) for .NET using channels. It is heavily inspired by channels in the Go programming language.</Description>
+    <Copyright>2017 Frank Thomsen</Copyright>
+    <PackageProjectUrl>https://github.com/fthoms/jiminy</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/fthoms/jiminy</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>csp "communicating sequential processes" concurrent concurrency synchronization synchronisation</PackageTags>
+    <PackageReleaseNotes>Release candidate 1</PackageReleaseNotes>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
