--- a/src/Jiminy/Jiminy/Jiminy.csproj
+++ b/src/Jiminy/Jiminy/Jiminy.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <Version>1.0.0-rc1</Version>
+    <Version>1.0.1</Version>
     <Authors>Frank Thomsen</Authors>
     <Company />
     <Description>Communicating sequential processes (CSP) for .NET using channels. It is heavily inspired by channels in the Go programming language.</Description>
@@ -13,6 +13,7 @@
     <PackageTags>csp channels concurrent concurrency synchronization synchronisation</PackageTags>
     <PackageReleaseNotes>Release candidate 1</PackageReleaseNotes>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
