--- a/src/Jiminy/Jiminy/Jiminy.csproj
+++ b/src/Jiminy/Jiminy/Jiminy.csproj
@@ -2,27 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <Version>1.0.2</Version>
-    <Authors>Frank Thomsen</Authors>
-    <Company />
-    <Description>Communicating sequential processes (CSP) for .NET using channels. It is heavily inspired by channels in the Go programming language.</Description>
-    <Copyright>2017 Frank Thomsen</Copyright>
-    <PackageProjectUrl>https://github.com/fthoms/jiminy</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/fthoms/jiminy</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageTags>csp channels concurrent concurrency synchronization synchronisation</PackageTags>
-    <PackageReleaseNotes>Simplifies default handler in nonblocking select, but otherwise does not change the public interface.</PackageReleaseNotes>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <AssemblyVersion>1.0.2</AssemblyVersion>
-    <FileVersion>1.0.2.0</FileVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ChannelListeners\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.ValueTuple" Version="4.3.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.1" />
   </ItemGroup>
 
 </Project>
